[package]
name = "arc-isle"
version = "0.1.2"
edition = "2021"
license = "Apache-2.0"
description = "The Interface Specification Language for the Arc project: design and implementation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4"
either = "1.8.1"
crossterm = "0.27.0"
clap = { version = "4.5.2", features = ["derive"] }
